<resources>
    <string name="app_name">hmc</string>
    <string name="title">QR code scanner HMC</string>
    <string name="scan_text">Сканировать</string>
    <string name="clear_text">Очистить список</string>
    <string name="copy">Копировать</string>
    <string name="codes_found">Найденные коды:</string>
    <string name="copyed">Текст скопирован</string>
    <string name="restart_app">Перезагрузите приложение</string>
    <string name="share">Поделиться</string>
    <string name="ready">Готово</string>
    <string name="only_receipt_format">Только чеки ФНС</string>
    <string name="open_tg">Открыть телегу</string>
    <string name="with_sound">Со звуком</string>
    <string name="light">Вспышка</string>

</resources>