<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView_qrs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/scan_text" />

        <CheckBox
            android:id="@+id/only_receipt_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/only_receipt_format" />

        <CheckBox
            android:id="@+id/with_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/with_sound" />

        <Button
            android:id="@+id/buttonSendTg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonSendTgClick"
            android:text="@string/open_tg" />

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCopyClick"
            android:text="@string/copy" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClearClick"
            android:text="@string/clear_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>